<resources>
    <string name="app_name">Nalanda Livings</string>
    <string name="nalanda_name">alanda</string>
    <string name="databselink">https://nalanda-app-default-rtdb.asia-southeast1.firebasedatabase.app</string>
    <string name="explore_text">In strange place, unfamiliar faces, streets and languages all around. Wouldn\'t it be nice to find a place that feels just like home?</string>
    <string name="select_hostel"><u>Select Hostel</u></string>
    <string name="chanakaya_location">Near Interglobe college\n<b>Greater Noida</b></string>
    <string name="if_already_an_user_click_here"><u>If already an User. Click Here...</u></string>
    <string name="click_here_if_you_are_new_user"><u>Click Here. If you are new User</u></string>
    <string name="hostel_description">Lorem ipsum dolor sit amet. Cum molestias nemo non dolor sunt ut omnis galisum itaque accusamus et magni alias rem sint dignissimos aut error quasi. In facilis dolorem qui minus temporibus ex rerum\n\nvoluptatem non explicabo maiores aut rerum totam rem sunt tempore. Sed ratione quisquam sit dolorem quia hic similique culpa est impedit asperiores. Aut odit culpa et nostrum quidem quo voluptatessunt \n\ncum voluptatibus galisum nam consectetur quisquam a eveniet modi.Et exercitationem reiciendis aut quas libero et officiis laudantium</string>
    <string name="food">Food</string>
    <string name="my_room">My Room</string>
    <string name="dashboard">Dashboard</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="add_money"><u>add money</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_is_dinner">How was your dinner yesterday?</string>
    <string name="today">Today</string>
    <string name="book_now">Book Now</string>
    <string name="gaming_room">#Gaming_Room</string>
    <string name="what_s_happening">What\'s happening</string>
    <string name="laundry_services">Laundry Services</string>
    <string name="choose_photo">Choose photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="services">Services</string>
    <string name="todo">TODO</string>
    <string name="referandearn">Refer your Friend &amp; Earn</string>
    <string name="our_story">Our Story</string>
    <string name="our_value1">Nalanda believes that access to correct living conditions should be a right, not a privilege.</string>
    <string name="our_value2">Nalanda believes that access to correct living conditions should be a right, not a privilege.</string>
    <string name="nalanda_promise">Nalanda believes that access to correct living conditions should be a right, not a privilege. We are committed to ensuring that our students have every opportunity to succeed, regardless of their socio-economic background. Part of this commitment is providing safe and affordable accommodation for our students.</string>
    <string name="our_story_content">Nalanda Living is founded by Mr Rahul Pratap Nagar, who understands the student’s problems around accommodation and committed to offer a solution. He believes that Student community deserves a better lodging and boarding ecosystem in India. The current facilities are either too clumsy and lacks basic requirements of hygiene, comfortable living conditions OR super costly. With concept of Nalanda Living, we want to offer cosy, comfortable and hygienic living at affordable rates.</string>
    <string-array name="male_female_str_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="array_indian_states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamilnadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_andra_pradesh_cities">
        <item>Adoni</item>
        <item>Amalapuram</item>
        <item>Anakapalle</item>
        <item>Anantapur</item>
        <item>Bapatla</item>
        <item>Bheemunipatnam</item>
        <item>Bhimavaram</item>
        <item>Bobbili</item>
        <item>Chilakaluripet</item>
        <item>Chirala</item>
        <item>Chittoor</item>
        <item>Dharmavaram</item>
        <item>Eluru</item>
        <item>Gooty</item>
        <item>Gudivada</item>
        <item>Gudur</item>
        <item>Guntakal</item>
        <item>Guntur</item>
        <item>Hindupur</item>
        <item>Jaggaiahpet</item>
        <item>Jammalamadugu</item>
        <item>Kadapa</item>
        <item>Kadiri</item>
        <item>Kakinada</item>
        <item>Kandukur</item>
        <item>Kavali</item>
        <item>Kovvur</item>
        <item>Kurnool</item>
        <item>Macherla</item>
        <item>Machilipatnam</item>
        <item>Madanapalle</item>
        <item>Mandapeta</item>
        <item>Markapur</item>
        <item>Nagari</item>
        <item>Naidupet</item>
        <item>Nandyal</item>
        <item>Narasapuram</item>
        <item>Narasaraopet</item>
        <item>Narsipatnam</item>
        <item>Nellore</item>
        <item>Nidadavole</item>
        <item>Nuzvid</item>
        <item>Ongole</item>
        <item>Palacole</item>
        <item>Palasa Kasibugga</item>
        <item>Parvathipuram</item>
        <item>Pedana</item>
        <item>Peddapuram</item>
        <item>Pithapuram</item>
        <item>Ponnur</item>
        <item>Proddatur</item>
        <item>Punganur</item>
        <item>Puttur</item>
        <item>Rajahmundry</item>
        <item>Rajam</item>
        <item>Rajampet</item>
        <item>Ramachandrapuram</item>
        <item>Rayachoti</item>
        <item>Rayadurg</item>
        <item>Renigunta</item>
        <item>Repalle</item>
        <item>Salur</item>
        <item>Samalkot</item>
        <item>Sattenapalle</item>
        <item>Srikakulam</item>
        <item>Srikalahasti</item>
        <item>Srisailam Project (Right Flank Colony) Township</item>
        <item>Sullurpeta</item>
        <item>Tadepalligudem</item>
        <item>Tadpatri</item>
        <item>Tanuku</item>
        <item>Tenali</item>
        <item>Tirupati</item>
        <item>Tiruvuru</item>
        <item>Tuni</item>
        <item>Uravakonda</item>
        <item>Venkatagiri</item>
        <item>Vijayawada</item>
        <item>Vinukonda</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>Yemmiganur</item>
        <item>Yerraguntla</item>
    </string-array>
    <string-array name="array_andaman_and_nicobar_cities">
        <item>Port Blair</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_cities">
        <item>Naharlagun</item>
        <item>Pasighat</item>
    </string-array>
    <string-array name="array_assam_cities">
        <item>Barpeta</item>
        <item>Bongaigaon City</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Diphu</item>
        <item>Goalpara</item>
        <item>Guwahati</item>
        <item>Jorhat</item>
        <item>Karimganj</item>
        <item>Lanka</item>
        <item>Lumding</item>
        <item>Mangaldoi</item>
        <item>Mankachar</item>
        <item>Margherita</item>
        <item>Mariani</item>
        <item>Marigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>North Lakhimpur</item>
        <item>Rangia</item>
        <item>Sibsagar</item>
        <item>Silapathar</item>
        <item>Silchar</item>
        <item>Tezpur</item>
        <item>Tinsukia</item>
    </string-array>
    <string-array name="array_bihar_cities">
        <item>Araria</item>
        <item>Arrah</item>
        <item>Arwal</item>
        <item>Asarganj</item>
        <item>Aurangabad</item>
        <item>Bagaha</item>
        <item>Barh</item>
        <item>Begusarai</item>
        <item>Bettiah</item>
        <item>BhabUrban Agglomeration</item>
        <item>Bhagalpur</item>
        <item>Buxar</item>
        <item>Chhapra</item>
        <item>Darbhanga</item>
        <item>Dehri-on-Sone</item>
        <item>Dumraon</item>
        <item>Forbesganj</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Hajipur</item>
        <item>Jamalpur</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Katihar</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Lalganj</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Maharajganj</item>
        <item>Mahnar Bazar</item>
        <item>Makhdumpur</item>
        <item>Maner</item>
        <item>Manihari</item>
        <item>Marhaura</item>
        <item>Masaurhi</item>
        <item>Mirganj</item>
        <item>Mokameh</item>
        <item>Motihari</item>
        <item>Motipur</item>
        <item>Munger</item>
        <item>Murliganj</item>
        <item>Muzaffarpur</item>
        <item>Narkatiaganj</item>
        <item>Naugachhia</item>
        <item>Nawada</item>
        <item>Nokha</item>
        <item>Patna</item>
        <item>Piro</item>
        <item>Purnia</item>
        <item>Rafiganj</item>
        <item>Rajgir</item>
        <item>Ramnagar</item>
        <item>Raxaul Bazar</item>
        <item>Revelganj</item>
        <item>Rosera</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Sasaram</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sherghati</item>
        <item>Silao</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Sonepur</item>
        <item>Sugauli</item>
        <item>Sultanganj</item>
        <item>Supaul</item>
        <item>Warisaliganj</item>
    </string-array>
    <string-array name="array_chandigarh_cities">
        <item>Chandigarh</item>
    </string-array>
    <string-array name="array_chhattisgarh_cities">
        <item>Ambikapur</item>
        <item>Bhatapara</item>
        <item>Bhilai Nagar</item>
        <item>Bilaspur</item>
        <item>Chirmiri</item>
        <item>Dalli-Rajhara</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Jagdalpur</item>
        <item>Korba</item>
        <item>Mahasamund</item>
        <item>Manendragarh</item>
        <item>Mungeli</item>
        <item>Naila Janjgir</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sakti</item>
        <item>Tilda Newra</item>
    </string-array>
    <string-array name="array_dadra_and_nagar_haveli_cities">
        <item>Silvassa</item>
    </string-array>
    <string-array name="array_delhi_cities">
        <item>Delhi</item>
        <item>New Delhi</item>
    </string-array>
    <string-array name="array_goa_cities">
        <item>Mapusa</item>
        <item>Margao</item>
        <item>Marmagao</item>
        <item>Panaji</item>
    </string-array>
</resources>