<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/food_icon"
        android:icon="@drawable/food_icon"
        android:color="@color/nav_chip"
        android:title="@string/food"/>

    <item
        android:id="@+id/room_icon"
        android:icon="@drawable/room_icon"
        android:title="@string/my_room"
        android:color="@color/nav_chip"/>

    <item
        android:id="@+id/dashboard_icon"
        android:icon="@drawable/dashboard_icon"
        android:checked="true"
        android:color="@color/nav_chip"
        android:title="@string/dashboard"/>

    <item
        android:id="@+id/explore_icon"
        android:icon="@drawable/explore_icon"
        android:color="@color/nav_chip"
        android:title="@string/explore"/>

    <item
        android:id="@+id/profile_icon"
        android:icon="@drawable/profile_logo"
        android:color="@color/nav_chip"
        android:title="@string/profile"/>

</menu>