<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/different_white"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".dashboard_fragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/gamingRoomCV"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/gaminghouse"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/different_black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="10sp"
                android:paddingStart="18dp"
                android:gravity="center"
                android:paddingEnd="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="3dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="35dp"
                android:text="@string/book_now"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/different_white"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/gaming_room"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/different_white"
                android:layout_marginStart="50dp"
                android:text="Reserve your Seat Now"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/whatsHappeningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/what_s_happening"
        android:textColor="@color/different_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gamingRoomCV" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dashboard_story_rv"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/whatsHappeningText"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>