<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".explore_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/explore_fragment_welcomeToHappinessText"
        android:layout_marginTop="25dp"
        android:text="Welcome to Happiness"
        android:textColor="@color/different_black"
        android:textSize="24sp"
        android:fontFamily="@font/petit_formal_script"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/explore_fragment_welcomeToHappinessText"
        android:id="@+id/explore_frag_collage_holder"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/rohit_img"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:scaleType="fitXY"
                android:src="@drawable/rohit_img"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginEnd="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/rohit_img"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/rohit_img"/>
        </LinearLayout>
        
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/explore_fragment_ourStoryText"
        android:layout_marginTop="25dp"
        android:text="@string/our_story"
        android:textColor="@color/different_black"
        android:textSize="24sp"
        android:fontFamily="@font/petit_formal_script"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/explore_frag_collage_holder" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/explore_fragment_ourStoryContent"
        android:textSize="12sp"
        android:text="@string/our_story_content"
        android:textColor="@color/black"
        android:justificationMode="inter_word"
        android:fontFamily="@font/poppins_regular"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/explore_fragment_ourStoryText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/explore_fragment_nalandaPromiseText"
        android:layout_marginTop="25dp"
        android:text="The Nalanda Promise"
        android:textColor="@color/different_black"
        android:textSize="22sp"
        android:drawablePadding="20dp"
        android:fontFamily="@font/petit_formal_script"
        android:textStyle="italic|bold"
        android:drawableTop="@drawable/nalanda_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/explore_fragment_ourStoryContent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/explore_fragment_nalandaPromiseContent"
            android:textSize="12sp"
            android:text="@string/nalanda_promise"
            android:textColor="@color/black"
            android:justificationMode="inter_word"
            android:fontFamily="@font/poppins_regular"
            android:layout_margin="25dp"
            app:layout_constraintTop_toBottomOf="@id/explore_fragment_nalandaPromiseText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/explore_fragment_ourValueText"
            android:layout_marginTop="25dp"
            android:text="Our Values"
            android:textColor="@color/different_black"
            android:textSize="24sp"
            android:fontFamily="@font/petit_formal_script"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/explore_fragment_nalandaPromiseContent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/explore_fragment_ourValueContent1"
            android:textSize="12sp"
            android:text="@string/our_value1"
            android:textColor="@color/black"
            android:justificationMode="inter_word"
            android:drawableEnd="@drawable/goal_logo"
            android:drawablePadding="40dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_margin="25dp"
            app:layout_constraintTop_toBottomOf="@id/explore_fragment_ourValueText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/explore_fragment_ourValueContent2"
            android:textSize="12sp"
            android:text="@string/our_value2"
            android:textColor="@color/black"
            android:justificationMode="inter_word"
            android:drawableStart="@drawable/goal_logo2"
            android:drawablePadding="40dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_margin="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/explore_fragment_ourValueContent1"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>