<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/light_blue_more"
    android:elevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/choosePhotoText"
            android:textColor="@color/black"
            android:text="@string/choose_photo"
            android:textSize="20sp"
            android:fontFamily="@font/inter_semi_bold"
            android:layout_marginTop="18dp"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/chooseCamera"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="30dp"
            android:layout_marginTop="20dp"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choosePhotoText">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="13dp"
                android:background="@color/light_blue_more"
                android:src="@drawable/cameraimg"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/different_black"
            android:text="@string/camera"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/chooseCamera"
            app:layout_constraintEnd_toEndOf="@id/chooseCamera"
            app:layout_constraintTop_toBottomOf="@id/chooseCamera"/>

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/chooseGallery"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="30dp"
            android:elevation="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/chooseCamera"
            app:layout_constraintTop_toBottomOf="@id/choosePhotoText"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="13dp"
                android:background="@color/light_blue_more"
                android:src="@drawable/galleryimg"
                tools:ignore="ContentDescription" />



        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/different_black"
            android:text="@string/gallery"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/chooseGallery"
            app:layout_constraintEnd_toEndOf="@id/chooseGallery"
            app:layout_constraintTop_toBottomOf="@id/chooseGallery"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>